--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@prisma/client": "^5.11.0",
 		"bcrypt": "^5.1.1",
 		"concurrently": "^8.2.2",
+		"html-pdf": "^3.0.1",
 		"moment": "^2.30.1",
 		"node-xlsx": "^0.24.0",
 		"sass": "^1.72.0"
