--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"start": "PORT=4000 node -r dotenv/config build/index.js"
+		"start": "BODY_SIZE_LIMIT=600000 PORT=4000 node -r dotenv/config build/index.js"
 	},
 	"devDependencies": {
 		"@iconify/svelte": "^4.0.2",
